<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:titleCondensed="@string/home"
        android:checked="true"
        />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/mapa" />

    <item
        android:id="@+id/nav_parkmenow"
        android:icon="@drawable/ic_baseline_local_parking_24"
        android:title="Park me now"
        />


    <item
        android:id="@+id/nav_veiculos"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/meus_veiculos" />



    <item
        android:id="@+id/nav_definition"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/definicoes" />



</menu>