<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="4dp"
        tools:listitem="@layout/parque_view_list" />

    <LinearLayout
        android:id="@+id/filter_fragment"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/blackNew"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible"

        android:focusable="true">


        <TextView
            android:id="@+id/text_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/filters"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/tipo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_estrutura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_tipo"
                android:padding="4dp"
                android:text="@string/estrutura" />

            <CheckBox
                android:id="@+id/checkbox_superficie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/text_tipo"
                android:layout_alignParentEnd="true"
                android:text="@string/superficie" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/distancia"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_menos5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_distancia"
                android:layout_alignParentStart="true"
                android:padding="4dp"
                android:text="0-5KM" />

            <CheckBox
                android:id="@+id/checkbox_entre5_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_distancia"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:text="5-10KM" />

            <CheckBox
                android:id="@+id/checkbox_mais10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_distancia"
                android:layout_alignParentEnd="true"

                android:text="+10KM" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_ocupacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/ocupacao"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_menos90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ocupacao"
                android:layout_alignParentStart="true"
                android:padding="4dp"
                android:text="0%-90%" />

            <CheckBox
                android:id="@+id/checkbox_entre90_99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ocupacao"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:text="90%-99%" />

            <CheckBox
                android:id="@+id/checkbox_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ocupacao"
                android:layout_alignParentEnd="true"

                android:text="100%" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_ocupacao_ordenacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/ocupacao_ordenacao"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_decrescente_ocupacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ocupacao_ordenacao"
                android:padding="4dp"
                android:text="@string/decreasing" />

            <CheckBox
                android:id="@+id/checkbox_crescente_ocupacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ocupacao_ordenacao"
                android:layout_alignParentEnd="true"
                android:text="@string/increasing" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text_distancia_ordenacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/distancia_ordenacao"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_decrescente_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_distancia_ordenacao"
                android:padding="4dp"
                android:text="@string/decreasing" />

            <CheckBox
                android:id="@+id/checkbox_crescente_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_distancia_ordenacao"
                android:layout_alignParentEnd="true"
                android:text="@string/increasing" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/red"
                android:text="@string/close"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/button_close"
                android:layout_marginEnd="-111dp"
                android:text="Ok" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_close"
                android:gravity="center_horizontal"
                android:text="@string/reset_filter"
                android:textColor="@color/whiteNew"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/recycler_view"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="false"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_baseline_filter_list_24"
        android:tint="@color/grey"
        app:backgroundTint="@color/colorPrimaryDark" />


</RelativeLayout>