<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/veiculo_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/inserir_historico"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Park"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/parqueSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:hint="BMW"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textAlignment="center"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/veiculo"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/veiculoSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:hint="Serie 1"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/preco_hora"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/preco_info_car"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="3,59"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hora"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/horas_car"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="3,59"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/dia"
                android:textAlignment="center"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/data_info_car"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="03/09/2000"
                android:inputType="date"
                android:padding="8dp"
                android:textAlignment="center" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_history_insert"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_done"
            app:backgroundTint="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>